Added a Settings Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,25 @@
         <item>November</item>
         <item>December</item>
     </string-array>
+    <string-array name="colors">
+        <item>Colors:</item>
+        <item>Red</item>
+        <item>Yellow</item>
+        <item>Blue</item>
+        <item>Green</item>
+        <item>Purple</item>
+        <item>Orange</item>
+        <item>Black</item>
+        <item>White</item>
+        <item>Gray</item>
+        <item>Light Gray</item>
+        <item>Dark Gray</item>
+    </string-array>
+    <string-array name="themes">
+        <item>Night Owl</item>
+        <item>Techno Feel</item>
+        <item>Neon City</item>
+        <item>Sunny Day</item>
+    </string-array>
 
 </resources>
